<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.robertsoultanaev.sphinxproxy.ConfigActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textViewPop3Port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_pop3_port"
                app:layout_constraintBottom_toTopOf="@+id/editTextPop3Port"
                app:layout_constraintEnd_toEndOf="@+id/editTextPop3Port"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextPop3Port"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextPop3Port"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/textview_pop3_port"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textViewSmtpPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_smtp_port"
                app:layout_constraintBottom_toTopOf="@+id/editTextSmtpPort"
                app:layout_constraintEnd_toEndOf="@+id/editTextSmtpPort"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextSmtpPort"
                app:layout_constraintTop_toBottomOf="@+id/editTextPop3Port"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextSmtpPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/textview_smtp_port"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPop3Port" />


            <TextView
                android:id="@+id/textViewProxyUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_proxy_username"
                app:layout_constraintBottom_toTopOf="@id/editTextProxyUsername"
                app:layout_constraintEnd_toEndOf="@+id/editTextProxyUsername"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextProxyUsername"
                app:layout_constraintTop_toBottomOf="@+id/editTextSmtpPort"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextProxyUsername"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/textview_proxy_username"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextSmtpPort" />


            <TextView
                android:id="@+id/textViewProxyPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_proxy_password"
                app:layout_constraintBottom_toTopOf="@+id/editTextProxyPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextProxyPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextProxyPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextProxyUsername"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextProxyPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/textview_proxy_password"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextProxyUsername" />


            <TextView
                android:id="@+id/textViewMailboxHostname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_mailbox_hostname"
                app:layout_constraintBottom_toTopOf="@+id/editTextMailboxHostname"
                app:layout_constraintEnd_toEndOf="@+id/editTextMailboxHostname"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextMailboxHostname"
                app:layout_constraintTop_toBottomOf="@+id/editTextProxyPassword"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextMailboxHostname"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/textview_mailbox_hostname"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextProxyPassword"
                tools:layout_editor_absoluteY="75dp" />



            <TextView
                android:id="@+id/textiViewMailboxPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_mailbox_port"
                app:layout_constraintBottom_toTopOf="@+id/editTextMailboxPort"
                app:layout_constraintEnd_toEndOf="@+id/editTextMailboxPort"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextMailboxPort"
                app:layout_constraintTop_toBottomOf="@+id/editTextMailboxHostname"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextMailboxPort"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/textview_mailbox_port"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextMailboxHostname" />



            <TextView
                android:id="@+id/textViewMailboxUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_mailbox_username"
                app:layout_constraintBottom_toTopOf="@+id/editTextMailboxUsername"
                app:layout_constraintEnd_toEndOf="@+id/editTextMailboxUsername"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextMailboxUsername"
                app:layout_constraintTop_toBottomOf="@+id/editTextMailboxPort"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextMailboxUsername"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/textview_mailbox_username"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextMailboxPort" />



            <TextView
                android:id="@+id/textViewMailboxPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_mailbox_password"
                app:layout_constraintBottom_toTopOf="@+id/editTextMailboxPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextMailboxPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextMailboxPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextMailboxUsername"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextMailboxPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/textview_mailbox_password"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/buttonSaveConfig"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextMailboxUsername"
                app:layout_constraintVertical_bias="0.0" />



            <Button
                android:id="@+id/buttonSaveConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:onClick="saveConfig"
                android:text="@string/button_save_config"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextMailboxPassword" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
